--- a/tip/558.md
+++ b/tip/558.md
@@ -53,55 +53,79 @@ any validation of the provided value required for settable properties (with
 the good side-effect of meaning that custom error messages are trivial to
 implement).
 
-# Specification
+# Specification: Basic Support
 
 Classes and objects will gain two extra slots each, being the list of readable
-properties and the list of writable properties of the class or object. (The
-order of the elements in the slots will not be important, but a uniqueness
-constraint will be enforced so that no element can be in a slot twice.) The
-slot configuration commands will be placed in the namespaces
-`::oo::configuresupport` (which is otherwise just an ordinary namespace): they
-will be:
+properties and the list of writable properties of the class or object. (These
+slots represent sets; just as with `variable` slots, the order of the elements
+in the slots will not be important, but a uniqueness constraint will be
+enforced so that no element can be in a slot twice.) The slot configuration
+commands will be placed in the namespaces `::oo::configuresupport` (which is
+otherwise just an ordinary namespace): they will be:
 
- * `::oo::configuresupport::readableproperties`
- * `::oo::configuresupport::writableproperties`
- * `::oo::configuresupport::objreadableproperties`
- * `::oo::configuresupport::objwritableproperties`
+ * `::oo::configuresupport::readableproperties` for configuring the slot
+    listing readable properties of a class.
+ * `::oo::configuresupport::writableproperties` for configuring the slot
+    listing writable properties of a class.
+ * `::oo::configuresupport::objreadableproperties` for configuring the slot
+    listing readable properties of an instance.
+ * `::oo::configuresupport::objwritableproperties` for configuring the slot
+    listing writable properties of an instance.
  
 There will be also related `info` subcommands:
 
- * `info class property $cls ?options...?`
- 
-   This will report the properties for a (prototypical instance of the) class
-   given by `$cls`, reporting the readable ones by default, and the writable
-   properties if the option `-writable` is given (and the option `-readable`
-   may be given instead to explicitly get the default behaviour). By default
-   it will report only the properties registered on the current class; the
-   ones on the full class hierarchy up to the class are obtained by passing
-   the option `-all`.
- 
- * `info object property $obj ?options...?`
- 
-    This is similar, but instead applies to a particular object.
+ * **info class property** _cls_ ?_options..._?
 
-Making use of this will be a new class, `::oo::configurable`, which will
-provide the implementation of the `configure` method (the only method it
-provides) and (via [TIP #524](524.md) capabilities) the user visible
-`property` declarations.
+    This will report the properties for a (prototypical instance of the) class
+    given by _cls_, reporting the readable ones by default, and the writable
+    properties if the option **-writable** is given (and the
+    option **-readable** may be given instead to explicitly get the default
+    behaviour). By default it will report only the properties registered on
+	the current class; the ones on the full class hierarchy up to the class
+	are obtained by passing the option **-all**.
+ 
+    The reported list will be sorted, as if by `lsort -ascii -unique`.
+ 
+ * **info object property** _obj_ ?_options..._?
+
+    This is similar, but instead applies to a particular object, _obj_. It may
+    include properties set on just the object instance.
+
+It should be noted here that the presence of a property in one class or
+instance does not prevent it from being listed by another class or instance,
+and that the listing of a propertty name in either slot does not actually
+guarantee that the property will be handled by the class that declares it; it
+is merely convention that it does so. There is also no way for a class or
+instance to prevent a property from being exposed once a superclass has
+decided to expose it.
+
+# Specification: Interface for Ordinary Scripts
+
+Making use of these basic capabilities (themselves intended to be usable with
+other configuration mechanisms out of the scope of this TIP or entirely) will
+be a new class, `::oo::configurable`, which will provide the implementation of
+the `configure` method (the only method it provides) and (via
+[TIP #524](524.md) capabilities) the user visible `property` declarations.
+This class will be written in pure Tcl.
 
 ## Configure Method
 
 The `configure` method provided by `::oo::configurable` will support three
 modes of operation:
 
- 1. _obj_ **configure** — return a dictionary of all readable properties from
-    the _obj_ instance, its class and superclasses and all mixins, and their
-    values.
- 2. _obj_ **configure** _-prop_ — return the value of readable property
-    _-prop_.
- 3. _obj_ **configure** _-prop value_ ?_-prop value_...? — update each
-    writable property _prop_ with its associated value, _value_, in the order
-    given.
+ 1. _obj_ **configure** —
+ 
+    This returns a dictionary of all readable properties from the _obj_
+    instance, its class and superclasses and all mixins, and their values.
+
+ 2. _obj_ **configure** _-prop_
+ 
+    This returns the value of readable property _-prop_.
+	
+ 3. _obj_ **configure** _-prop value_ ?_-prop value_...?
+ 
+    This updates each writable property _prop_ with its associated value,
+    _value_, in the order given.
 
 In all cases, the name _-prop_ can be abbreviated provided it is unambiguous.
 The definitive list of property names is that provided by asking `info object
@@ -157,29 +181,29 @@ the property works. In particular, these options are supported:
 
  * **-kind** _propType_
 
-   This makes the property be readable, writable or read-write, depending on
-   whether _propType_ is **readable**, **writable** or **readwrite**
-   respectively. If not specified, the property is read-write.
+    This makes the property be readable, writable or read-write, depending on
+    whether _propType_ is **readable**, **writable** or **readwrite**
+    respectively. If not specified, the property is read-write.
 
  * **-get** _methodBody_
 
-   This allows you to specify the body of the implementation method for
-   reading the property (whose name is derived from the property name as
-   specified above) from the instances of the class or the object. If this
-   option is not supplied and the property is of readable or read-write kind,
-   a default will be used which just returns the contents of an instance
-   variable with the same name as the property (without leading dash). No
-   arguments will be supplied to the method.
+    This allows you to specify the body of the implementation method for
+    reading the property (whose name is derived from the property name as
+    specified above) from the instances of the class or the object. If this
+    option is not supplied and the property is of readable or read-write kind,
+    a default will be used which just returns the contents of an instance
+    variable with the same name as the property (without leading dash). No
+    arguments will be supplied to the method.
 
  * **-set** _methodBody_
  
-   This allows you to specify the body of the implementation method for
-   writing the property (whose name is derived from the property name as
-   specified above) in instances of the class or the object. The method will
-   take a single argument, `value`. If this option is not supplied and the
-   property is of writable or read-write kind, a default will be used that
-   just stores the argument in the instance variable with the same name as the
-   property (without leading dash).
+    This allows you to specify the body of the implementation method for
+    writing the property (whose name is derived from the property name as
+    specified above) in instances of the class or the object. The method will
+    take a single argument, `value`. If this option is not supplied and the
+    property is of writable or read-write kind, a default will be used that
+    just stores the argument in the instance variable with the same name as
+    the property (without leading dash).
 
 In particular, this means that if one does:
 
