--- a/tip/558.md
+++ b/tip/558.md
@@ -93,7 +93,7 @@ There will be also related `info` subcommands:
 
 It should be noted here that the presence of a property in one class or
 instance does not prevent it from being listed by another class or instance,
-and that the listing of a propertty name in either slot does not actually
+and that the listing of a property name in either slot does not actually
 guarantee that the property will be handled by the class that declares it; it
 is merely convention that it does so. There is also no way for a class or
 instance to prevent a property from being exposed once a superclass has
