--- a/tip/558.md
+++ b/tip/558.md
@@ -7,6 +7,7 @@
         Post-History:
         Tcl-Version:    8.7
         Keywords:       Tcl, TclOO, properties
+        Tcl-Branch:     tip-558
 -----
 
 # Abstract
@@ -55,13 +56,14 @@ implement).
 
 # Specification: Basic Support
 
-Classes and objects will gain two extra slots each, being the list of readable
-properties and the list of writable properties of the class or object. (These
-slots represent sets; just as with `variable` slots, the order of the elements
-in the slots will not be important, but a uniqueness constraint will be
-enforced so that no element can be in a slot twice.) The slot configuration
-commands will be placed in the namespaces `::oo::configuresupport` (which is
-otherwise just an ordinary namespace): they will be:
+Classes and objects will gain two extra slots (see [TIP #380](380.md)) each,
+being the list of readable properties and the list of writable properties of
+the class or object. (These slots represent sets; just as with `variable`
+slots, the order of the elements in the slots will not be important, but a
+uniqueness constraint will be enforced so that no element can be in a slot
+twice.) The slot configuration commands will be placed in the namespaces
+`::oo::configuresupport` (which is otherwise just an ordinary namespace) as
+they are not intended for ordinary user code to use directly: they will be:
 
  * `::oo::configuresupport::readableproperties` for configuring the slot
     listing readable properties of a class.
@@ -71,7 +73,11 @@ otherwise just an ordinary namespace): they will be:
     listing readable properties of an instance.
  * `::oo::configuresupport::objwritableproperties` for configuring the slot
     listing writable properties of an instance.
- 
+
+The slots enforce uniqueness of property names within the slot (by removing
+duplicates), but otherwise impose no policy on what names are acceptable.
+Order within these slots is not considered to be significant.
+
 There will be also related `info` subcommands:
 
  * **info class property** _cls_ ?_options..._?
@@ -103,14 +109,18 @@ decided to expose it.
 
 Making use of these basic capabilities (themselves intended to be usable with
 other configuration mechanisms out of the scope of this TIP or entirely) will
-be a new class, `::oo::configurable`, which will provide the implementation of
-the `configure` method (the only method it provides) and (via
-[TIP #524](524.md) capabilities) the user visible `property` declarations.
-This class will be written in pure Tcl.
+be a new metaclass, `::oo::configurable`, which will provide the
+implementation of the **configure** method (the only method it provides) and
+(via [TIP #524](524.md) capabilities) the user visible **property**
+declarations. This class will be written in pure Tcl.
+
+As `::oo::configurable` is a metaclass, it is used to _create_ configurable
+classes and not just as a superclass. The instances of the classes it creates
+will be the actually configurable entities.
 
 ## Configure Method
 
-The `configure` method provided by `::oo::configurable` will support three
+The **configure** method provided by `::oo::configurable` will support three
 modes of operation:
 
  1. _obj_ **configure** —
@@ -156,9 +166,9 @@ methods by default.
 When a class is a subclass of `::oo::configurable` (or has it mixed in), it
 will have an extra declaration:
 
- * **property** _name_ ?_-option value_...?
+ * **property** _name_ ?_-option value_...? ?_name_ ?_-option value_...??...
 
-This will declare a property on the class under definition that can be
+This will declare one or more properties on the class under definition that can be
 configured by the instances of that class. The property will be named with a
 single minus sign preceding it (e.g., `property foo` creates something that
 can be configured as `-foo`). It will be an error for _name_ to begin with a
@@ -169,7 +179,7 @@ can be configured as `-foo`). It will be an error for _name_ to begin with a
 When an object is an instance (direct or indirect) of `::oo::configurable` (or
 has it mixed in), it will have an extra declaration:
 
- * **property** _name_ ?_-option value_...?
+ * **property** _name_ ?_-option value_...?  ?_name_ ?_-option value_...??...
 
 This is much the same as when classes are configurable, except that it applies
 the property definition changes to the instance.
@@ -177,7 +187,12 @@ the property definition changes to the instance.
 ## Property Definition Options
 
 The _-option_ arguments (and their values) of property definitions modify how
-the property works. In particular, these options are supported:
+the property works. The options for a property follow the name of that
+property; they are _not_ shared between different properties declared at the
+same time.
+
+In particular, these options are supported (all of which currently take a
+single value):
 
  * **-kind** _propType_
 
@@ -207,10 +222,8 @@ the property works. In particular, these options are supported:
 
 In particular, this means that if one does:
 
-    oo::class create Point {
-        superclass oo::configurable
-        property x
-        property y
+    oo::configurable create Point {
+        property x y
         constructor args {
             my configure -x 0 -y 0 {*}$args
         }
@@ -240,7 +253,7 @@ variable.
 
 # Implementation
 
-To be done
+See the `tip-558` branch.
 
 # Copyright
 
