--- a/tip/558.md
+++ b/tip/558.md
@@ -174,6 +174,10 @@ single minus sign preceding it (e.g., `property foo` creates something that
 can be configured as `-foo`). It will be an error for _name_ to begin with a
 `-` character.
 
+This definition command is `namespace export`ed from the namespace
+`::oo::configuresupport::configurableclass` so that it may be used in other
+definition language namespaces easily.
+
 ## Property Declarations for Instances
 
 When an object is an instance (direct or indirect) of `::oo::configurable` (or
@@ -183,6 +187,10 @@ has it mixed in), it will have an extra declaration:
 
 This is much the same as when classes are configurable, except that it applies
 the property definition changes to the instance.
+
+This definition command is `namespace export`ed from the namespace
+`::oo::configuresupport::configurableobject` so that it may be used in other
+definition language namespaces easily.
 
 ## Property Definition Options
 
