Tinkering with the structure of 558

--- a/tip/558.md
+++ b/tip/558.md
@@ -54,7 +54,20 @@ any validation of the provided value required for settable properties (with
 the good side-effect of meaning that custom error messages are trivial to
 implement).
 
-# Specification: Basic Support
+# Specification
+
+This specification is split into two parts. The first is the part in C that
+all classes and objects will support, but which no pre-existing class (before
+this TIP) does anything with by default even once this TIP is accepted.
+
+The second part of this specification is a purely scripted implementation of a
+simple property system based on that core that provides a `property`
+definition for creating properties on classes and objects, and a `configure`
+method for accessing them. It is intended that other types of property system
+will exist (especially to support Tk megawidgets) but such alternate systems
+are out of the scope of this TIP.
+
+## Basic Support for Properties
 
 Classes and objects will gain two extra slots (see [TIP #380](380.md)) each,
 being the list of readable properties and the list of writable properties of
@@ -65,18 +78,20 @@ twice.) The slot configuration commands will be placed in the namespaces
 `::oo::configuresupport` (which is otherwise just an ordinary namespace) as
 they are not intended for ordinary user code to use directly: they will be:
 
- * `::oo::configuresupport::readableproperties` for configuring the slot
+ * **::oo::configuresupport::readableproperties** for configuring the slot
     listing readable properties of a class.
- * `::oo::configuresupport::writableproperties` for configuring the slot
+ * **::oo::configuresupport::writableproperties** for configuring the slot
     listing writable properties of a class.
- * `::oo::configuresupport::objreadableproperties` for configuring the slot
+ * **::oo::configuresupport::objreadableproperties** for configuring the slot
     listing readable properties of an instance.
- * `::oo::configuresupport::objwritableproperties` for configuring the slot
+ * **::oo::configuresupport::objwritableproperties** for configuring the slot
     listing writable properties of an instance.
 
 The slots enforce uniqueness of property names within the slot (by removing
-duplicates), but otherwise impose no policy on what names are acceptable.
-Order within these slots is not considered to be significant.
+duplicates), but otherwise impose no policy on what names are acceptable or
+define any semantics of what a property actually is or how it is manipulated
+beyond the discovery mechanism below. Order within these slots is not
+considered to be significant.
 
 There will be also related `info` subcommands:
 
@@ -87,11 +102,11 @@ There will be also related `info` subcommands:
     properties if the option **-writable** is given (and the
     option **-readable** may be given instead to explicitly get the default
     behaviour). By default it will report only the properties registered on
-	the current class; the ones on the full class hierarchy up to the class
-	are obtained by passing the option **-all**.
- 
+    the current class; the ones on the full class hierarchy up to the class
+    are obtained by passing the option **-all**.
+
     The reported list will be sorted, as if by `lsort -ascii -unique`.
- 
+
  * **info object property** _obj_ ?_options..._?
 
     This is similar, but instead applies to a particular object, _obj_. It may
@@ -105,63 +120,70 @@ is merely convention that it does so. There is also no way for a class or
 instance to prevent a property from being exposed once a superclass has
 decided to expose it.
 
-# Specification: Interface for Ordinary Scripts
+To restate: this core mechanism is just an efficient property _publication and
+discovery_ mechanism. It does not define how a property actually works. That
+is up to scripted classes that build on this.
+
+## Interface for Ordinary Scripts
 
 Making use of these basic capabilities (themselves intended to be usable with
 other configuration mechanisms out of the scope of this TIP or entirely) will
-be a new metaclass, `::oo::configurable`, which will provide the
+be a new metaclass, **::oo::configurable**, which will provide the
 implementation of the **configure** method (the only method it provides) and
 (via [TIP #524](524.md) capabilities) the user visible **property**
 declarations. This class will be written in pure Tcl.
 
-As `::oo::configurable` is a metaclass, it is used to _create_ configurable
-classes and not just as a superclass. The instances of the classes it creates
-will be the actually configurable entities.
+As **::oo::configurable** is a metaclass, it is used to _create_ configurable
+classes and not just as a superclass/mixin. The instances of the classes it
+creates will be the actually configurable entities. A class should only
+inherit from **::oo::configurable** when it wishes to be a metaclass that
+makes classes that have configurable properties on their instances.
 
-## Configure Method
+### Configure Method
 
-The **configure** method provided by `::oo::configurable` will support three
-modes of operation:
+The **configure** method provided to classes created by **::oo::configurable**
+will support three modes of operation:
 
  1. _obj_ **configure** —
- 
+
     This returns a dictionary of all readable properties from the _obj_
     instance, its class and superclasses and all mixins, and their values.
 
  2. _obj_ **configure** _-prop_
- 
+
     This returns the value of readable property _-prop_.
-	
+
  3. _obj_ **configure** _-prop value_ ?_-prop value_...?
- 
+
     This updates each writable property _prop_ with its associated value,
     _value_, in the order given.
 
 In all cases, the name _-prop_ can be abbreviated provided it is unambiguous.
-The definitive list of property names is that provided by asking `info object
-property` with the `-all` option and the appropriate mode flag. The
-`configure` method will handle the disambiguation.
+The definitive list of property names is that provided by asking **info object
+property** with the **-all** option and the appropriate mode flag. The
+**configure** method will handle the disambiguation.
 
-When `configure` determines that it wishes to read a property, `-prop`, it
-delegates the actual reading of the property to a method, `<ReadProp-prop>`
-(e.g., for a property `-foo`, the method will be `<ReadProp-foo>`) which is
-assumed to take no extra arguments and return the value of the property. Any
-error produced by this method (or a `break` or `configure` result) will result
-in `configure` producing an error; for errors, the message will be identical.
+When **configure** determines that it wishes to read a property, `-prop`, it
+delegates the actual reading of the property to a
+method, **&lt;ReadProp**`-prop`**&gt;** (e.g., for a property `-foo`, the
+method will be `<ReadProp-foo>`) which is assumed to take no extra arguments
+and return the value of the property. Any error produced by this method (or a
+`break` or `continue` result) will result in **configure** producing an error;
+for errors, the message will be identical.
 
-When `configure` determines that it wishes to write a property, `-prop`, it
-delegates the actual writing of the property to a method, `<WriteProp-prop>`
-(e.g., for a property `-foo`, the method will be `<WriteProp-foo>`) which is
-assumed to take one extra argument that is the value to write. Any error
-produced by this method (or a `break` or `configure` result) will result in
-`configure` producing an error; for errors, the message will be identical.
-Successful results will be ignored.
+When **configure** determines that it wishes to write a property, `-prop`, it
+delegates the actual writing of the property to a
+method, **&lt;WriteProp**`-prop`**&gt;** (e.g., for a property `-foo`, the
+method will be `<WriteProp-foo>`) which is assumed to take one extra argument
+that is the value to write. Any error produced by this method (or a `break` or
+`continue` result) will result in **configure** producing an error; for
+errors, the message will be identical. Successful results will be ignored.
 
 Note that the property reader and writer methods described above are ordinary
 methods subject to normal override rules, and will likely be non-exported
 methods by default.
 
-## Property Declarations for Classes
+### Property Declarations for Classes
 
 When a class is a subclass of `::oo::configurable` (or has it mixed in), it
 will have an extra declaration:
@@ -175,10 +197,10 @@ can be configured as `-foo`). It will be an error for _name_ to begin with a
 `-` character.
 
 This definition command is `namespace export`ed from the namespace
-`::oo::configuresupport::configurableclass` so that it may be used in other
+**::oo::configuresupport::configurableclass** so that it may be used in other
 definition language namespaces easily.
 
-## Property Declarations for Instances
+### Property Declarations for Instances
 
 When an object is an instance (direct or indirect) of `::oo::configurable` (or
 has it mixed in), it will have an extra declaration:
@@ -189,10 +211,10 @@ This is much the same as when classes are configurable, except that it applies
 the property definition changes to the instance.
 
 This definition command is `namespace export`ed from the namespace
-`::oo::configuresupport::configurableobject` so that it may be used in other
+**::oo::configuresupport::configurableobject** so that it may be used in other
 definition language namespaces easily.
 
-## Property Definition Options
+### Property Definition Options
 
 The _-option_ arguments (and their values) of property definitions modify how
 the property works. The options for a property follow the name of that
@@ -218,8 +240,13 @@ single value):
     variable with the same name as the property (without leading dash). No
     arguments will be supplied to the method.
 
+    The default method body is (with `<propNameWithoutDash>` being substituted
+    appropriately):
+
+        ::set [my varname <propNameWithoutDash>]
+
  * **-set** _methodBody_
- 
+
     This allows you to specify the body of the implementation method for
     writing the property (whose name is derived from the property name as
     specified above) in instances of the class or the object. The method will
@@ -227,6 +254,30 @@ single value):
     property is of writable or read-write kind, a default will be used that
     just stores the argument in the instance variable with the same name as
     the property (without leading dash).
+
+    The default method body is (with `<propNameWithoutDash>` being substituted
+    appropriately):
+
+        ::set [my varname <propNameWithoutDash>] $value
+
+One of the main reasons for supplying a **-set** for a property is so that
+invalid values can be rejected; the default code does not reject any values at
+all. One of the main reasons for supplying a **-get** for a property is to
+allow the value returned to be computed rather than just simply held in a
+variable.
+
+Note that if a class defines writable property with a particular name and
+another class defines a readable property with the same name, these can be
+brought together in the inheritance graph to form an apparent read-write
+property. This is by design.
+
+### Property Initialisation
+
+This TIP provides no special mechanism for initialising a property. See the
+examples below for how to implement a simple mechanism using the **configure**
+method.
+
+# Examples
 
 In particular, this means that if one does:
 
@@ -253,15 +304,23 @@ You can then do:
     puts [$pt configure]
                  # -x 27 -y 42
 
-One of the main reasons for supplying a **-set** for a property is so that
-invalid values can be rejected; the default code does not reject any values at
-all. One of the main reasons for supplying a **-get** for a property is to
-allow the value returned to be computed rather than just simply held in a
-variable.
+That can then be extended with more properties by a subclass:
+
+    oo::configurable create Point3D {
+        superclass Point
+        property z
+        constructor args {
+            next -z 0 {*}$args
+        }
+    }
+
+    set pt2 [Point3D new -x 2 -y 3 -z 4]
+    puts [$pt2 configure]
+                  # -x 2 -y 3 -z 4
 
 # Implementation
 
-See the `tip-558` branch.
+See the [`tip-558`](/tcl/timeline?r=tip-558) branch.
 
 # Copyright
 
