Tweak 588 (plurals, more notes on constraints and so on)

--- a/tip/558.md
+++ b/tip/558.md
@@ -61,8 +61,8 @@ all classes and objects will support, but which no pre-existing class (before
 this TIP) does anything with by default even once this TIP is accepted.
 
 The second part of this specification is a purely scripted implementation of a
-simple property system based on that core that provides a `property`
-definition for creating properties on classes and objects, and a `configure`
+simple property system based on that core that provides a **property**
+definition for creating properties on classes and objects, and a **configure**
 method for accessing them. It is intended that other types of property system
 will exist (especially to support Tk megawidgets) but such alternate systems
 are out of the scope of this TIP.
@@ -95,7 +95,7 @@ considered to be significant.
 
 There will be also related `info` subcommands:
 
- * **info class property** _cls_ ?_options..._?
+ * **info class properties** _cls_ ?_options..._?
 
     This will report the properties for a (prototypical instance of the) class
     given by _cls_, reporting the readable ones by default, and the writable
@@ -107,7 +107,7 @@ There will be also related `info` subcommands:
 
     The reported list will be sorted, as if by `lsort -ascii -unique`.
 
- * **info object property** _obj_ ?_options..._?
+ * **info object properties** _obj_ ?_options..._?
 
     This is similar, but instead applies to a particular object, _obj_. It may
     include properties set on just the object instance.
@@ -160,20 +160,20 @@ will support three modes of operation:
 
 In all cases, the name _-prop_ can be abbreviated provided it is unambiguous.
 The definitive list of property names is that provided by asking **info object
-property** with the **-all** option and the appropriate mode flag. The
+properties** with the **-all** option and the appropriate mode flag. The
 **configure** method will handle the disambiguation.
 
-When **configure** determines that it wishes to read a property, `-prop`, it
+When **configure** determines that it wishes to read a property, _-prop_, it
 delegates the actual reading of the property to a
-method, **&lt;ReadProp**`-prop`**&gt;** (e.g., for a property `-foo`, the
+method, **&lt;ReadProp**_-prop_**&gt;** (e.g., for a property `-foo`, the
 method will be `<ReadProp-foo>`) which is assumed to take no extra arguments
 and return the value of the property. Any error produced by this method (or a
 `break` or `continue` result) will result in **configure** producing an error;
 for errors, the message will be identical.
 
-When **configure** determines that it wishes to write a property, `-prop`, it
+When **configure** determines that it wishes to write a property, _-prop_, it
 delegates the actual writing of the property to a
-method, **&lt;WriteProp**`-prop`**&gt;** (e.g., for a property `-foo`, the
+method, **&lt;WriteProp**_-prop_**&gt;** (e.g., for a property `-foo`, the
 method will be `<WriteProp-foo>`) which is assumed to take one extra argument
 that is the value to write. Any error produced by this method (or a `break` or
 `continue` result) will result in **configure** producing an error; for
@@ -190,15 +190,19 @@ will have an extra declaration:
 
  * **property** _name_ ?_-option value_...? ?_name_ ?_-option value_...??...
 
-This will declare one or more properties on the class under definition that can be
-configured by the instances of that class. The property will be named with a
-single minus sign preceding it (e.g., `property foo` creates something that
-can be configured as `-foo`). It will be an error for _name_ to begin with a
-`-` character.
+This will declare one or more properties on the class under definition that
+can be configured by the instances of that class. The property will be named
+with a single minus sign preceding it (e.g., `property foo` creates something
+that can be configured as `-foo`). It will be an error for _name_ to begin
+with a `-` character (because this is used to indicate options to the command
+that modify the nature of the property being defined).
 
 This definition command is `namespace export`ed from the namespace
 **::oo::configuresupport::configurableclass** so that it may be used in other
 definition language namespaces easily.
+
+(The command **properties** in the same namespace will also exist; it is just
+a pluralised alias. It will _not_ be a documented feature.)
 
 ### Property Declarations for Instances
 
@@ -213,6 +217,9 @@ the property definition changes to the instance.
 This definition command is `namespace export`ed from the namespace
 **::oo::configuresupport::configurableobject** so that it may be used in other
 definition language namespaces easily.
+
+(The command **properties** in the same namespace will also exist; it is just
+a pluralised alias. It will _not_ be a documented feature.)
 
 ### Property Definition Options
 
@@ -271,11 +278,30 @@ another class defines a readable property with the same name, these can be
 brought together in the inheritance graph to form an apparent read-write
 property. This is by design.
 
+## Notes
+
 ### Property Initialisation
 
 This TIP provides no special mechanism for initialising a property. See the
 examples below for how to implement a simple mechanism using the **configure**
 method.
+
+### Interaction with Private Variables and Methods
+
+This TIP has no special relationship with **variable** declarations
+or **private** declarations. In particular, it does nothing to alter those
+declarations, and it creates simple method declarations that need no
+particular declaration for the property storage variable. This means that
+other methods of the class may want to use **variable** to make the storage
+variable available, and may use **private variable** to create variables that
+are lightly shrouded from other classes.
+
+However, a **property** declaration will _not_ be private even if it is
+prefixed with a **private** command. This is because the implementation
+methods that it creates need to be accessed from outside the immediate class
+(i.e., from the **configure** method implementation). Instead, property
+implementation methods created by the **property** declaration are always
+unexported.
 
 # Examples
 
